tests/errors/lex_octal.java
public class lex_octal {
	public static int a = 0007;
}
